# split_mmd

./: .env  .gitignore  home.py  pyproject.toml
db_mongo/: db_util.py
mathpixAPI/: mathpix_pdf.py  pdf_id.txt
pages/: pdf_typeA_page.py
split/: split_mmd.py  url_images.py
streamlit_pages/: test_mathpixAPI.py  test_split.py
